@@ -6,7 +6,7 @@
 
 <body>
 
-<h1>Howto build and run libgcj/gcj snapshots or checkouts</h1>
+<h1>How to build and run libgcj/gcj snapshots or checkouts</h1>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#cccccc">
@@ -72,17 +72,13 @@
 
 The Boehm GC is the collector picked up by default.
 
-If you compile under Linux you could omit the last two options. Under
+If you compile under GNU/Linux you could omit the last two options. Under
 Solaris you'll need them. If you omit '--prefix' the compiled source
 will be installed under /usr/local. For more information about
 installing gcc and/or configuration options see:
 
-  <a href="http://gcc.gnu.org/install/index.html">http://gcc.gnu.org/install/index.html</a>
+  <a href="http://gcc.gnu.org/install/">http://gcc.gnu.org/install/</a>
 
-If you have a broken gas/bin-utils (such as Debian potato) then you
-want to edit the auto-host.h file and remove the definition of
-HAVE_GAS_HIDDEN after configuring, but before typeing make.  See
-<a href="faq.html#5_7">the FAQ</a> for more information.
 </pre>
 </td>
 </tr>
@@ -92,14 +88,11 @@ HAVE_GAS_HIDDEN after configuring, but before typeing make.  See
 <pre>
 6. Adjust your environment
 
-Reflect your choice of --prefix value to your environment. It depends
-on which shell you're running. For csh compatible shells, edit a file
-env.csh:
+Reflect your choice of --prefix value to your environment. For csh
+compatible shells, this would be something like the following:
 
 setenv PATH /home/joerg/gcc/bin:$PATH
 setenv LD_LIBRARY_PATH /home/joerg/gcc/lib
-
-  $ source env.csh
 </pre>
 </td>
 </tr>
