@@ -1,3 +1,9 @@
+2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* build-snapshot.html: Refer to GNU/Linux, simplify link to
+	installation documentation, remove reference to an old FAQ,
+	some editorial changes.
+			 
 2012-10-27  Gerald Pfeifer  <gerald@pfeifer.com>
 	
 	* done.html: Adjust URL for rhug.
